--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,5 @@
-REACT_APP_CLOUD_NAME_CLOUDINARY = ddwo8iuhl
+MONGODB_URI=mongodb+srv://bimanhere:biman123@shoppingapp.mlq70vo.mongodb.net/SHOPPINGAPP?retryWrites=true&w=majority&appName=SHOPPINGAPP
+
+TOKEN_SECRET_KEY = "hskfjdhsfhshfshnfhsfsdsdf";
+
+FRONTEND_URL = http://localhost:3000
