--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://bimanhere:biman123@shoppingapp.mlq70vo.mongodb.net/SHOPPINGAPP?retryWrites=true&w=majority&appName=SHOPPINGAPP
+MONGODB_URI=mongodb+srv://bimanhere:biman123@shoppingapp.mlq70vo.mongodb.net/SHOPPINGAPP?retryWrites=true&w=majority&appName=SHOPPINGAPP;
 
 TOKEN_SECRET_KEY = "hskfjdhsfhshfshnfhsfsdsdf";
 
